--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div id="home"></div>
+      <div id="game"></div>
+    </div>
+    
     <script src="main.js" type="module"></script>
   </body>
 </html>
